<resources>
    <string name="app_name">UdacityFunQuiz</string>
    <string name="QuizTitle">xml views</string>
    <string name="question_1">What type of view do we use to show an image?</string>
    <string name="question_1_answer_1">CheckBox</string>
    <string name="question_1_answer_2">TextView</string>
    <string name="question_1_answer_3">ImageView</string>
    <string name="question_2">What type of view can we use to scroll down the screen if something is unseen?</string>
    <string name="question_2_answer_1">RadioButton</string>
    <string name="question_2_answer_2">ScrollView</string>
    <string name="question_2_answer_3">LinearLayout</string>
    <string name="question_3">What attributes can you use for the TextView?</string>
    <string name="question_3_answer_1">newTextline</string>
    <string name="question_3_answer_2">fontFamily</string>
    <string name="question_3_answer_3">autoLink</string>
    <string name="question_3_answer_4">tint</string>
    <string name="question_4">How can we also name the expression eXtensible Markup Language? </string>
    <string name="question_5"> The space inside the border, between the border and the actual view content is called:? </string>
    <string name="question_5_answer_1">Padding</string>
    <string name="question_5_answer_2">Margin</string>
    <string name="question_5_answer_3">Border</string>
    <string name="question_6">  The space outside the border, between the border and the other elements next to a view is called:? </string>
    <string name="question_6_answer_1">Border</string>
    <string name="question_6_answer_2">Margin</string>
    <string name="question_6_answer_3">Padding</string>
    <string name="hint">type here</string>
    <string name="ButtonAnswer" />
    <string name="ButtonAnswers">Check</string>
    <string name="ButtonCheck">Check</string>
    <string name="TODO">NiceImage</string>
</resources>