<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="@dimen/Padding"
    tools:context="com.example.android.udacityfunquiz.MainActivity">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/bluexml"
                android:contentDescription="@string/TODO" />

            <TextView
                android:id="@+id/Title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/QuizTitle"
                android:textAllCaps="true"
                android:textSize="@dimen/TitleSize" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="@dimen/TextViewMarginLeft"
                android:layout_marginTop="@dimen/TextViewMarginTop"
                android:text="@string/question_1"
                android:textSize="@dimen/question_size" />

            <RadioGroup
                android:id="@+id/question_radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/RadioButtonMarginStart"
                android:layout_marginLeft="@dimen/RadioButtonMarginStart">

                <RadioButton
                    android:id="@+id/question_radioGroup1_radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_1"
                    android:theme="@style/MyStyle"/>

                <RadioButton
                    android:id="@+id/question_radioGroup1_radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_2"
                    android:theme="@style/MyStyle"/>

                <RadioButton
                    android:id="@+id/question_radioGroup1_radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_3"
                    android:theme="@style/MyStyle"/>
            </RadioGroup>

        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/TextViewMarginLeft"
                android:layout_marginStart="@dimen/TextViewMarginStart"
                android:layout_marginTop="@dimen/TextViewMarginTop"
                android:text="@string/question_2"
                android:textSize="@dimen/question_size"
                 />

            <RadioGroup
                android:id="@+id/question_radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/RadioButtonMarginStart"
                android:layout_marginLeft="@dimen/RadioButtonMarginStart" >

                <RadioButton
                    android:id="@+id/question_radioGroup2_radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_1"
                    android:theme="@style/MyStyle"/>

                <RadioButton
                    android:id="@+id/question_radioGroup2_radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_2"
                    android:theme="@style/MyStyle"/>

                <RadioButton
                    android:id="@+id/question_radioGroup2_radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_answer_3"
                    android:theme="@style/MyStyle"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/TextViewMarginLeft"
                android:layout_marginStart="@dimen/TextViewMarginLeft"
                android:layout_marginTop="@dimen/TextViewMarginTop"
                android:text="@string/question_3"
                android:textSize="@dimen/question_size" />

            <CheckBox
                android:id="@+id/question3_checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/CheckButtonMarginStart"
                android:layout_marginStart="@dimen/CheckButtonMarginStart"
                android:text="@string/question_3_answer_1"
                android:theme="@style/MyStyle"/>

            <CheckBox
                android:id="@+id/question3_checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/CheckButtonMarginStart"
                android:layout_marginStart="@dimen/CheckButtonMarginStart"
                android:text="@string/question_3_answer_2"
                android:theme="@style/MyStyle"/>

            <CheckBox
                android:id="@+id/question3_checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/CheckButtonMarginStart"
                android:layout_marginStart="@dimen/CheckButtonMarginStart"
                android:text="@string/question_3_answer_3"
                android:theme="@style/MyStyle"/>

            <CheckBox
                android:id="@+id/question3_checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/CheckButtonMarginStart"
                android:layout_marginLeft="@dimen/CheckButtonMarginStart"
                android:text="@string/question_3_answer_4"
                android:theme="@style/MyStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/TextViewMarginLeft"
                android:layout_marginLeft="@dimen/TextViewMarginLeft"
                android:layout_marginTop="@dimen/TextViewMarginTop"
                android:text="@string/question_4"
                android:textSize="@dimen/question_size" />

            <EditText
                android:id="@+id/question_EditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/EditTextMarginStart"
                android:layout_marginStart="@dimen/EditTextMarginStart"
                android:hint="@string/hint"
                android:inputType="textCapWords"
                android:textSize="@dimen/TextSize" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/TextViewMarginLeft"
            android:layout_marginStart="@dimen/TextViewMarginStart"
            android:layout_marginTop="@dimen/TextViewMarginTop"
            android:text="@string/question_5"
            android:textSize="@dimen/question_size" />

        <RadioGroup
            android:id="@+id/question_radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/RadioButtonMarginStart"
            android:layout_marginLeft="@dimen/RadioButtonMarginStart" >

            <RadioButton
                android:id="@+id/question_radioGroup3_radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_1"
                android:theme="@style/MyStyle"/>

            <RadioButton
                android:id="@+id/question_radioGroup3_radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_2"
                android:theme="@style/MyStyle"/>

            <RadioButton
                android:id="@+id/question_radioGroup3_radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_3"
                android:theme="@style/MyStyle"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/TextViewMarginLeft"
            android:layout_marginStart="@dimen/TextViewMarginStart"
            android:layout_marginTop="@dimen/TextViewMarginTop"
            android:text="@string/question_6"
            android:textSize="@dimen/question_size" />

        <RadioGroup
            android:id="@+id/question_radioGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/RadioButtonMarginStart"
            android:layout_marginLeft="@dimen/RadioButtonMarginStart" >

            <RadioButton
                android:id="@+id/question_radioGroup4_radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_1"
                android:theme="@style/MyStyle"/>

            <RadioButton
                android:id="@+id/question_radioGroup4_radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_2"
                android:theme="@style/MyStyle"/>

            <RadioButton
                android:id="@+id/question_radioGroup4_radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_3"
                android:theme="@style/MyStyle"/>
        </RadioGroup>

        </LinearLayout>


         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/ButtonSpace"
            android:layout_marginTop="@dimen/ButtonSpace"
            android:background="@color/Blue"
            android:onClick="DisplayResults"
            android:padding="@dimen/ButtonPadding"
            android:text="@string/ButtonCheck"
            android:textColor="#001a66"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
